[workspace]
members = [
  "admin",
  "core/types",
  "repositories/types",
  "repositories/postgres",
  "wallet",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"
license = "Proprietary"
homepage = "http://localhost"
repository = "https://github.com/ivan-mudrak/pontoon"
exclude = [".github/"]

[workspace.dependencies]
admin = { path = "admin" }
actix-web = { version = "4.11", features = ["rustls-0_23"] }
actix-http = "3.11.0"
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = { version = "1", features = ["backtrace"] }
config = { version = "0.15.3", features = ["yaml"] }
base64 = "0.21"
futures-util = "0.3.31"
types = { path = "core/types" }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3.0", features = ["env-filter", "fmt"] }
repositories = { path = "repositories/types" }
rand = "0.8.5"
rsa = { version = "0.9.8", features = ["sha2"] }
postgres_database = { path = "repositories/postgres" }
hmac = "0.12.1"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "json",
] }
uuid = { version = "1", features = ["serde", "v4", "v5", "js"] }
