[package]
name = "admin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
anyhow.workspace = true
postgres_database.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
types.workspace = true
serde.workspace = true
serde_json.workspace = true
repositories.workspace = true
uuid.workspace = true
