[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
actix-http.workspace = true
anyhow.workspace = true
futures-util.workspace = true
postgres_database.workspace = true
tracing.workspace = true
tracing-actix-web.workspace = true
tracing-subscriber.workspace = true
types.workspace = true
serde.workspace = true
repositories.workspace = true
uuid.workspace = true
http.workspace = true
thiserror.workspace = true
