[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm.workspace = true
base64.workspace = true
config.workspace = true
hmac.workspace = true
serde.workspace = true
sqlx.workspace = true
rand.workspace = true
rsa.workspace = true
sha2.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
zeroize.workspace = true
secrecy.workspace = true
http.workspace = true

